--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,6 +26,7 @@ jobs:
 
     - name: Dotnet Build
       env:
+        LIVE_ALPACA_KEY_ID: ${{ secrets.LIVE_ALPACA_KEY_ID }}
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
       run: dotnet test -f netcoreapp3.0
