--- a/Alpaca.Markets.Tests.All/Alpaca.Markets.Tests.All.csproj
+++ b/Alpaca.Markets.Tests.All/Alpaca.Markets.Tests.All.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net461;net5</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net5</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
@@ -29,5 +29,7 @@
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
+
+  <Import Project="..\Alpaca.Markets.Tests\Alpaca.Markets.Tests.projitems" Label="Shared" />
 
 </Project>
