--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,4 +27,4 @@ jobs:
         LIVE_ALPACA_KEY_ID: ${{ secrets.LIVE_ALPACA_KEY_ID }}
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
-      run: dotnet test -c Release
+      run: dotnet test -c ${{ matrix.os }}
