--- a/.gitignore
+++ b/.gitignore
@@ -329,4 +329,4 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 
-Alpaca.Markets.Tests/Development.json
+Development.json
