Upgrade all dependencies and add .NET 6 as target.

--- a/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
+++ b/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alpaca.Markets" Version="5.2.2" />
-    <PackageReference Include="Alpaca.Markets.Extensions" Version="5.2.1" />
+    <PackageReference Include="Alpaca.Markets" Version="6.0.2-alpha2" />
+    <PackageReference Include="Alpaca.Markets.Extensions" Version="6.0.2-alpha1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
