Fix path for the SDK/Extensionns sources chekout.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: alpacahq/alpaca-trade-api-csharp
-        path: Alpaca.Markets
+        path: ../Alpaca.Markets
 
     - name: Setup .NET 6.0.x
       uses: actions/setup-dotnet@v1
