--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,34 +10,30 @@ jobs:
     steps:
     - name: Checkout Tests
       uses: actions/checkout@v2
+      with:
+        path: Alpaca.Markets.Tests
 
     - name: Checkout Sources
       uses: actions/checkout@v2
       with:
         repository: alpacahq/alpaca-trade-api-csharp
-        path: ../Alpaca.Markets
+        path: Alpaca.Markets
 
     - name: Setup .NET 6.0.x
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
 
-    - name: Cache NuGet Packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-nuget-
-
     - name: Restore .NET Tools
       run: dotnet tool restore
+      working-directory: ./Alpaca.Markets.Tests
 
     - name: Coverage All Tests
       env:
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
       run: dotnet dotcover test --dcXML=Configuration.xml Alpaca.Markets.Coverage\Alpaca.Markets.Coverage.sln
+      working-directory: ./Alpaca.Markets.Tests
 
     - name: Save Report
       uses: actions/upload-artifact@v2
