--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,8 +32,8 @@ jobs:
       env:
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
-      run: dotnet dotcover test --dcXML=Configuration.xml Alpaca.Markets.Coverage\Alpaca.Markets.Coverage.sln
-      working-directory: ./Alpaca.Markets.Tests
+      run: dotnet dotcover test --dcXML=../Configuration.xml
+      working-directory: ./Alpaca.Markets.Tests/Alpaca.Markets.Coverage
 
     - name: Save Report
       uses: actions/upload-artifact@v2
