Remove NuGet lock file for Extensions package before coverage run.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,6 +19,11 @@ jobs:
         repository: alpacahq/alpaca-trade-api-csharp
         path: Alpaca.Markets
 
+    - name: Remove NuGet Lock File
+      uses: JesseTG/rm@v1.0.2
+      with:
+        path: ./Alpaca.Markets/Alpaca.Markets.Extensions/packages.lock.json
+
     - name: Setup .NET 6.0.x
       uses: actions/setup-dotnet@v1
       with:
