--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -37,7 +37,7 @@ jobs:
       env:
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
-      run: dotnet dotcover test --dcXML=../Configuration.xml --force-evaluate
+      run: dotnet dotcover test --dcXML=../Configuration.xml
       working-directory: ./Alpaca.Markets.Tests/Alpaca.Markets.Coverage
 
     - name: Save Report
