--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,14 +30,14 @@ jobs:
 
     - name: Restore NuGet Packages
       run: dotnet restore --force-evaluate
-      working-directory: ./Alpaca.Markets.Tests/Alpaca.Markets.Coverage
+      working-directory: ./Alpaca.Markets.Tests Alpaca.Markets.Coverage.sln
 
     - name: Coverage All Tests
       env:
         PAPER_ALPACA_KEY_ID: ${{ secrets.PAPER_ALPACA_KEY_ID }}
         PAPER_ALPACA_SECRET_KEY: ${{ secrets.PAPER_ALPACA_SECRET_KEY }}
-      run: dotnet dotcover test --dcXML=../Configuration.xml
-      working-directory: ./Alpaca.Markets.Tests/Alpaca.Markets.Coverage
+      run: dotnet dotcover test --dcXML=Configuration.xml Alpaca.Markets.Coverage.sln
+      working-directory: ./Alpaca.Markets.Tests
 
     - name: Save Report
       uses: actions/upload-artifact@v2
