--- a/Alpaca.Markets.Tests.All/Alpaca.Markets.Tests.All.csproj
+++ b/Alpaca.Markets.Tests.All/Alpaca.Markets.Tests.All.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alpaca.Markets" Version="6.1.7-alpha1" />
+    <PackageReference Include="Alpaca.Markets" Version="6.1.7-beta1" />
     <PackageReference Include="Alpaca.Markets.Extensions" Version="6.1.0-alpha1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
