--- a/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
+++ b/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alpaca.Markets" Version="6.1.7-alpha1" />
+    <PackageReference Include="Alpaca.Markets" Version="6.1.7-beta1" />
     <PackageReference Include="Alpaca.Markets.Extensions" Version="6.1.0-alpha1" />
     <PackageReference Include="IndexRange" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
@@ -20,7 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Include="Portable.System.DateTimeOnly" Version="6.0.2" />
+    <PackageReference Include="Portable.System.DateTimeOnly" Version="6.0.3" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
