--- a/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
+++ b/Alpaca.Markets.Tests.Win/Alpaca.Markets.Tests.Win.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472;net48</TargetFrameworks>
+    <TargetFrameworks>net472;net48;net481</TargetFrameworks>
     <DefineConstants>$(DefineConstants);EXTENSIONS</DefineConstants>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ImplicitUsings>enable</ImplicitUsings>
